CSS fix for wide tables
This makes sure that the table will get its own little horizontal
scrollbar when it's too wide to fit on the screen, without making the
entire page wider

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -80,6 +80,27 @@ audio {
   width: 100%;
 }
 
+table {
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+}
+
+th {
+  border: 1px dashed black;
+  padding: 8px;
+}
+
+td {
+  border: 1px dashed black;
+  text-align: left;
+  padding: 8px;
+}
+
+th {
+  background-color: $light-highlight-salmon;
+}
+
 .fancy {
   border: 0;
   color: $black;
